<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newRekDone"
        android:fontFamily="casual"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uName"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/txtNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/username"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#0000ff"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:fontFamily="casual"
        android:text="@string/uRekening"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtNewRekening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:textColor="#0000ff"
        android:text="00000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:background="@drawable/background_button"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

</LinearLayout>