<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <LinearLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/setting_code_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1d6ef7"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeCode"
                android:textSize="18sp"
                android:textColor="#0000ff"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseRek"
                android:fontFamily="casual"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"/>

            <Spinner
                android:id="@+id/txtSettingNoRek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oldCode"
                    android:fontFamily="casual"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/txtOldCode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="casual"
                    android:layout_weight="1"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newCode"
                    android:fontFamily="casual"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/txtNewCode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="casual"
                    android:layout_weight="1"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reCode"
                    android:fontFamily="casual"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/txtReCode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="casual"
                    android:layout_weight="1"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnChangeCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:text="@string/submit"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:fontFamily="casual"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>
